﻿[B]2.0.0~beta1[/B]

- Updated several windows (and other files) for Kodi Helix.
- Added a new, dark skin color (Red-on-Black).
- Fixed some bugs.

[B]1.0.0[/B]

- Updated the version.

[B]1.0.0~beta4[/B]

- Added and changed some background images.
- Fixed some bugs.

[B]1.0.0~beta3[/B]

- Added and changed the busy animation, made a skin setting to select one of two animations.
- Added a Music Videos-option in the Home Menu.
- Added and changed some background images.
- Made some small interface improvements (description in Landscape-view, codec-information during playback, and more).
- Fixed some bugs.

[B]1.0.0~beta2[/B]

- Added a custom title window (and an option to enable or disable it), and a custom promo window (to create Revolve fanart).
- Replaced the Revolve icon, and added Revolve fanart.
- Improved the icons of many dialogs.
- Fixed some bugs.

[B]1.0.0~beta1[/B]

- Improved the information about Revolve in addon.xml.
- Made some small interface improvements (longer text in Revolve-view, moved clock when RSS is enabled in Home Menu, and more).
- Added and changed some background images.
- Fixed some bugs.

[B]0.5.0[/B]

- Fixed some bugs.

[B]0.4.1[/B]

- Fixed some bugs.

[B]0.4.0[/B]

- Added and improved skin settings (related to the circle items of the Home Menu), added a textfile viewer.
- Improved FileManager en MyMusicPlaylistEditor-windows (added scrollbars, fixed item count-label).
- Fixed some bugs.

[B]0.3.4[/B]

- Added three more custom options in the Home Menu among the pre-existing options Videos, Music, and Pictures.
- Added help-texts to all custom option-related dialogs.
- Added and replaced some artwork, mostly icons (media-flagging) and images for the Home Menu circle.
- Added 'reset to default'-buttons to all the Revolve skin settings-windows.
- Fixed some bugs.

[B]0.3.3[/B]

- Added submenus including a submenu editor as part of the custom options editor.