@@ -1,4 +1,9 @@
-﻿[B]2.0.0~beta1[/B]
+﻿[B]2.0.0~beta2[/B]
+
+- Improved mouse control (realigned some Menu lists and improved controls for the Side Menu).
+- Changed some artwork (media-icon for audio channels).
+
+[B]2.0.0~beta1[/B]
 
 - Updated several windows (and other files) for Kodi Helix.
 - Added a new, dark skin color (Red-on-Black).
